fix wrap - styling

--- a/src/_components/InstancesTable/InstancesTable.styles.scss
+++ b/src/_components/InstancesTable/InstancesTable.styles.scss
@@ -1,6 +1,6 @@
 .InstancesTable__wrapper {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   gap: 40px;
   background-color: #fff;
 }
